--- a/src/App.css
+++ b/src/App.css
@@ -349,6 +349,9 @@
     margin: 10px;
    }
   @media (max-width: 1024px) {
+    body{
+      background-image: url('./components/images/1024desktop.jpg');
+    }
     .logo{
       width: 300px;
       height: 40px;
@@ -516,6 +519,9 @@
 
 
   @media (max-width: 768px) {
+    body{
+      background-image: url('./components/images/768tablet.jpg');
+    }
     .logo{
       width: 300px;
       height: 40px;
@@ -669,6 +675,9 @@
 }
   }
   @media (max-width:462px) {
+    body{
+      background-image: url('./components/images/425mobile.jpg');
+    }
     .genres{
       margin: 3px;
       font-size: .6em;
